--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     ]
   },
   "dependencies": {
+    "@types/styled-components": "5.1.25",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "styled-components": "5.3.5"
   },
   "devDependencies": {
     "@commitlint/cli": "17.0.2",
